# aml_competition_3

./: README.md  main.ipynb  pyproject.toml
data/: X_test.csv  sample_submission.csv  y_train.csv
